fix: scrollbar
agregar scrollbar al menu lateral

--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -104,3 +104,10 @@ body {
   border-color: transparent;
   box-shadow: 0 0 0 3px rgba(255, 255, 255, .25);
 }
+
+.my-custom-scrollbar {
+  position: relative;
+  width: 800px;
+  height: 400px;
+  overflow: auto;
+}
